# rust-http-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: clippy.yml  deploy.yml  test.yml
migrations/: U1__create_category_table.sql
src/: main.rs
src/amqp/: config.rs  dto.rs  lib.rs  mod.rs
src/api/: config.rs  error.rs  lib.rs  mod.rs
src/api/middleware/: cors.rs
src/api/resources/: mod.rs
src/api/resources/categories/: dto.rs  mod.rs
src/api/resources/categories/routes/: create.rs  delete_by_id.rs  find.rs  find_by_id.rs  mod.rs  update_by_id.rs
src/api/resources/health/routes/: check.rs  mod.rs
src/api/resources/swagger/routes/: config.rs  mod.rs
src/api/tests/: utils.rs
src/api/utils/: mod.rs  response.rs  validator.rs
src/domain/: error.rs  mod.rs
src/domain/categories/: mod.rs  model.rs  repository.rs
src/domain/categories/resources/: create.rs  delete_by_id.rs  find.rs  find_by_id.rs  mod.rs  update_by_id.rs
src/domain/health/: check.rs  mod.rs  repository.rs
src/repository/: categories.rs  health.rs  mod.rs  postgres.rs  redis.rs
