[package]
name = "rust-http-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-http = "3.3.1"
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
serde = "1.0.163"
utoipa = "3.3.0"
utoipa-swagger-ui = "3.1.3"
