[package]
name = "rust-http-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-http = "3.3.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.152", features = ["derive"] }
serde_qs = { version = "0.12.0", features = ["actix4"] }
utoipa = { version = "3", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
redis = { version = "0.23", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7.8", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
deadpool-postgres = "0.10.5"
refinery = { version = "0.8", features = ["tokio-postgres"] }
tokio = { version = "1", features = ["rt"] }
async-trait = "0.1.68"
tokio-postgres-rustls = "0.10.0"
rustls = "0.21.1"
thiserror = "1.0.40"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
pem = "2.0.1"
serde_json = "1.0.96"
lapin = "2.2.1"
futures = "0.3.28"

[dev-dependencies]
mockall = "0.11.3"
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "api"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
